[project]
name = "sage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai[google-genai]>=1.9.3",
    "elasticsearch>=8.12.0",
    "fastapi>=0.129.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
    "PyJWT[crypto]>=2.8.0",
]
